--- a/css/styles.css
+++ b/css/styles.css
@@ -16,17 +16,9 @@ ul{
 
 .layout {
     margin: 0 auto;
-    position: relative;
     width: 950px;
-    padding: 0 35px;
 }
-/* header */
 
-#header {
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}
 #header .logo {
     float: left;
     display: flex;
@@ -46,7 +38,6 @@ ul{
     width: 385px;
 }
 #header nav li{
-    display: inline;
     font-family:'Trebuchet MS',sans-serif;
 }
 #header nav a:hover{
@@ -68,12 +59,8 @@ a{
    clear: both;
 }
 #main{
-    overflow: hidden;
     float: right;
-    position: relative;
-    width: 710px;
     padding-top: 21px;
-    z-index: 0;
     border-top:5px solid #0481c2;  
    
 }
@@ -94,14 +81,10 @@ a{
     width: 100%;
 }
 #main#main .banner .infocont{
-    display:block;
-    overflow: hidden;
     padding: 0 15px;
     height: 100%;
     width: 175px;
     position: absolute;
-    z-index: 50;
-    top: 0;
     right: 0;
     background-color: rgba(175, 173, 173, 0.4) 
 }
@@ -112,14 +95,12 @@ a{
     color: #fff
 }
 #main .banner .infocont p{
-    margin-top: 12px;
     font-family: 'Arial', sans-serif;
     font-size: 12px;
     color: #fff;
 }
 #main .mainbottom ul{
     display: flex;
-    flex-flow: row nowrap;
     justify-content: space-between;
     margin-top: 39px;
 }
@@ -135,10 +116,12 @@ a{
 }
 
 #main .mainbottom ul li a{
+    display: block;
     text-decoration: none;
     overflow: hidden;
     color: #878787;
-    font-size: 12px; 
+    font-size: 12px;
+    padding-top: 15px;
 }
 
 #main .mainbottom ul li a:hover{
@@ -182,25 +165,35 @@ a{
 }
 
 #sidebar fieldset{
-    width: 226px;
     border: 1px solid #5e5e5e
     }
 
 #sidebar .search input{
     background: url(../pic/Search.png);
     background-repeat: no-repeat;
-    background-position: right ; 
+    background-position: right 7px center ; 
+    width: 226px;
+    padding: 5px;    
+
 }
 
 #sidebar fieldset input{
     border: none;
 }
 
+#sidebar input::-webkit-input-placeholder {color:#dfdede;}
+#sidebar input::-moz-placeholder          {color:#dfdede;}
+#sidebar input:-moz-placeholder           {color:#dfdede;}
+#sidebar input:-ms-input-placeholder      {color:#dfdede;}
+
 #sidebar a{
+    display: block;
     text-decoration: none;
     overflow: hidden;
     color: #878787;
     font-size: 12px; 
+    padding-top:15px; 
+
 }
 
 #sidebar a:hover{
@@ -212,23 +205,29 @@ a{
     font-size: 24px;
     color: #0481c2;
     border-bottom: 1px solid #5e5e5e;
+    margin-bottom: 0;
 }
 
 #sidebar h3{
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 14px;
     color: #0481c2;
+    margin-bottom: 14px;
+    margin-top: 0;
 }
 
 #sidebar .news1{
     border-bottom: 1px solid #5e5e5e;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
+    margin-top:20px; 
 
 }
 
 #sidebar .news2{
     border-bottom: 1px solid #5e5e5e;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
+    margin-top:20px; 
+    
 }
 
     
@@ -268,21 +267,28 @@ a{
     background: url('../pic/rss1.png') 0 0 ;
     padding: 11px;
     display: block;
+    margin-right: 6px;
 }
 .socials .twitter{
     background: url('../pic/rss1.png') top 0 right 50px ;
     padding: 11px;
     display: block;
+    margin-right: 6px;
+    
 }
 .socials .linkedin{
     background: url('../pic/rss1.png') top 0 right 78px ;
     padding: 11px;
     display: block;
+    margin-right: 6px;
+    
 }
 .socials .myspace{
     background: url('../pic/rss1.png') top 0 right 104px;
     padding: 11px;
     display: block;
+    margin-right: 6px;
+    
 }
 .socials .rss{
     background: url('../pic/rss1.png') top 0 right 134px ;
