--- a/css/styles.css
+++ b/css/styles.css
@@ -18,37 +18,47 @@ ul{
     margin: 0 auto;
     width: 950px;
 }
-
-#header .logo {
-    float: left;
+#header {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    width: 100%;
+}
+#header .logo {
+    display: flex;
+    align-self: center;
+    width:100%;
 }
 #header .logo a{
+    display: block;
     position: relative;
-    padding: 55px 0 50px 0;
-}
-#header nav {
-    float: right;
-}
-#header nav ul{
+    background: url('../pic/logo.png');
+    width: 106px;
+    height: 51px;
+    background-repeat: no-repeat;
+    text-indent: -9000px;
+    }
+    
+#header .navigation {
     display: flex;
-    flex-flow: row nowrap;
+    justify-content: flex-end;
+}
+#header .navigation ul{
+    display: flex;
     justify-content: space-between;
     width: 385px;
 }
-#header nav li{
+#header .navigation li{
     font-family:'Trebuchet MS',sans-serif;
 }
-#header nav a:hover{
+#header .navigation a:hover{
     color: #0481c2;
 }
-#header nav a{
+#header .navigation a{
     display: block;
     text-transform: capitalize;
     color: #878787;
     font-size: 20px;
-    padding: 64px 0 70px 0;
+    padding: 60px 0 69px 0;
 }
 a{
     text-decoration: none;
@@ -65,22 +75,15 @@ a{
    
 }
 #main .banner{
-    width: 100%;
     position: relative;
 }
-#main .mainpic1{
-    display: block;
-    overflow: hidden;
-    z-index: 1;
-    width: 100%;
-    position: relative;
-}
+
 #main img{
     display: block;
     overflow: hidden;
-    width: 100%;
 }
-#main#main .banner .infocont{
+#main .banner .banner-content{
+    display: block;
     padding: 0 15px;
     height: 100%;
     width: 175px;
@@ -89,20 +92,26 @@ a{
     background-color: rgba(175, 173, 173, 0.4) 
 }
 #main .banner h2{
-    margin-top: 73px;
+    padding-top: 55px;
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 18px;
-    color: #fff
+    color: #fff;
 }
-#main .banner .infocont p{
+#main .banner p{
     font-family: 'Arial', sans-serif;
     font-size: 12px;
     color: #fff;
 }
+
+#main .mainbottom{
+    padding-bottom: 27px;    
+    padding-top: 40px;
+    
+}
+
 #main .mainbottom ul{
     display: flex;
     justify-content: space-between;
-    margin-top: 39px;
 }
 
 #main .mainbottom ul li{
@@ -133,8 +142,7 @@ a{
     overflow: hidden;  
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 18px; 
-    width: 100%;
-    padding: 10px 0 10px 0;
+    padding: 10px 0 5px 0;
     color: #0481c2; 
     margin: 5px 0;
 }
@@ -165,15 +173,17 @@ a{
 }
 
 #sidebar fieldset{
-    border: 1px solid #5e5e5e
+
     }
 
 #sidebar .search input{
     background: url(../pic/Search.png);
     background-repeat: no-repeat;
     background-position: right 7px center ; 
-    width: 226px;
-    padding: 5px;    
+    width: 228px;
+    padding: 5px;
+    border: 1px solid #5e5e5e;
+    
 
 }
 
@@ -205,28 +215,29 @@ a{
     font-size: 24px;
     color: #0481c2;
     border-bottom: 1px solid #5e5e5e;
-    margin-bottom: 0;
+    padding:20px 0 4px 0;
+    margin: 0;
 }
 
 #sidebar h3{
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 14px;
     color: #0481c2;
-    margin-bottom: 14px;
-    margin-top: 0;
+    padding-bottom: 14px;
+    padding: ;
+    margin: 0;
 }
 
 #sidebar .news1{
     border-bottom: 1px solid #5e5e5e;
-    padding-bottom: 20px;
-    margin-top:20px; 
-
+    padding-bottom: 23px;
+    padding-top:25px; 
 }
 
 #sidebar .news2{
     border-bottom: 1px solid #5e5e5e;
-    padding-bottom: 20px;
-    margin-top:20px; 
+    padding-bottom: 23px;
+    padding-top:24px; 
     
 }
 
@@ -234,19 +245,55 @@ a{
 #footer{
     overflow: hidden;
     width: 100%;
-    padding: 0;
-    margin: 0;
 }
 #footer .socials {
     display: flex;
     float: left;
     border-top:5px solid #0481c2;
-    width: 226px;
-    padding-top: 10px;
-    margin-top: 25px;
-    margin: 25px 0 60px 0;
+    width: 228px;
+    padding-top: 5px;
+    position: relative;
     
 }
+
+}
+.socials .li {
+    display: inline-block;
+}
+.socials .facebook{
+    background: url('../pic/rss1.png') no-repeat 0 0;
+    width: 23px;
+    height: 23px;
+    display: block;
+}
+.socials .twitter{
+    background: url('../pic/rss1.png') no-repeat -28px 0 ;
+    width: 23px;
+    height: 23px;
+    display: block;
+    
+}
+.socials .linkedin{
+    background: url('../pic/rss1.png') no-repeat -55px 0 ;
+    width: 23px;
+    height: 23px;
+    display: block;
+    
+}
+.socials .myspace{
+    background: url('../pic/rss1.png') no-repeat -82px 0;
+    width: 23px;
+    height: 23px;
+    display: block;
+    
+}
+.socials .rss{
+    background: url('../pic/rss1.png') no-repeat -111px 0 ;
+    width: 23px;
+    height: 23px;
+    display: block;
+}
+
 #footer .copy{
     overflow: hidden;
     float: right;
@@ -256,42 +303,4 @@ a{
     border-top:5px solid #0481c2; 
     width: 710px;
     text-align: right;
-    padding-top: 10px;
-    margin: 25px 0 60px 0;
-}
-
-.socials{
-    position: relative;
-}
-.socials .facebook{
-    background: url('../pic/rss1.png') 0 0 ;
-    padding: 11px;
-    display: block;
-    margin-right: 6px;
-}
-.socials .twitter{
-    background: url('../pic/rss1.png') top 0 right 50px ;
-    padding: 11px;
-    display: block;
-    margin-right: 6px;
-    
-}
-.socials .linkedin{
-    background: url('../pic/rss1.png') top 0 right 78px ;
-    padding: 11px;
-    display: block;
-    margin-right: 6px;
-    
-}
-.socials .myspace{
-    background: url('../pic/rss1.png') top 0 right 104px;
-    padding: 11px;
-    display: block;
-    margin-right: 6px;
-    
-}
-.socials .rss{
-    background: url('../pic/rss1.png') top 0 right 134px ;
-    padding: 11px;
-    display: block;
-}
+    padding: 12px 0 60px 0;
