--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ ul{
     width: 385px;
 }
 #header .navigation li{
-    font-family:'Trebuchet MS',sans-serif;
+    font-family:'Trebuchet MS', Arial, Verdana, Tahoma,sans-serif;
 }
 #header .navigation a:hover{
     color: #0481c2;
@@ -93,12 +93,12 @@ a{
 }
 #main .banner h2{
     padding-top: 55px;
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', Arial, Verdana, Tahoma, sans-serif;
     font-size: 18px;
     color: #fff;
 }
 #main .banner p{
-    font-family: 'Arial', sans-serif;
+    font-family: 'Arial', Arial, Verdana, Tahoma, sans-serif;
     font-size: 12px;
     color: #fff;
 }
@@ -106,7 +106,6 @@ a{
 #main .mainbottom{
     padding-bottom: 27px;    
     padding-top: 40px;
-    
 }
 
 #main .mainbottom ul{
@@ -140,7 +139,7 @@ a{
 #main .mainbottom ul li h4{
     display: block;
     overflow: hidden;  
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', Arial, Verdana, Tahoma, sans-serif;
     font-size: 18px; 
     padding: 10px 0 5px 0;
     color: #0481c2; 
@@ -149,7 +148,7 @@ a{
 #main .mainbottom ul li p{
     display: block;
     overflow: hidden;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Arial', Arial, Verdana, Tahoma, sans-serif;
     color: #3c3c3c;    
     font-size: 12px; 
     margin: 0;
@@ -162,29 +161,36 @@ a{
     border-top:5px solid #0481c2;  
 }
 
-
 #sidebar p{
     display: block;
     overflow: hidden;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Arial', Verdana, Tahoma, sans-serif;
     color: #3c3c3c;    
     font-size: 12px; 
     margin: 0;
 }
 
 #sidebar fieldset{
-
+    border: 1px solid #5e5e5e;
+    width: 227px;
     }
 
-#sidebar .search input{
-    background: url(../pic/Search.png);
-    background-repeat: no-repeat;
-    background-position: right 7px center ; 
-    width: 228px;
-    padding: 5px;
-    border: 1px solid #5e5e5e;
-    
+#sidebar .search-field{
+    border: none;
+    outline: none;
+    width: 200px;
+    vertical-align: middle;
+    font-size: 14px;
+    vertical-align: center;    
+}
 
+#sidebar .button {
+    padding: 0;
+    width: 18px;
+    height: 19px;
+    border: none;
+    background: url(../pic/Search.png) no-repeat 50% 50%;
+    
 }
 
 #sidebar fieldset input{
@@ -203,7 +209,6 @@ a{
     color: #878787;
     font-size: 12px; 
     padding-top:15px; 
-
 }
 
 #sidebar a:hover{
@@ -211,7 +216,7 @@ a{
 }    
 
 #sidebar h2{
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', Arial, Verdana, Tahoma, sans-serif;
     font-size: 24px;
     color: #0481c2;
     border-bottom: 1px solid #5e5e5e;
@@ -220,7 +225,7 @@ a{
 }
 
 #sidebar h3{
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', Arial, Verdana, Tahoma, sans-serif;
     font-size: 14px;
     color: #0481c2;
     padding-bottom: 14px;
@@ -238,9 +243,7 @@ a{
     border-bottom: 1px solid #5e5e5e;
     padding-bottom: 23px;
     padding-top:24px; 
-    
 }
-
     
 #footer{
     overflow: hidden;
@@ -256,7 +259,6 @@ a{
     
 }
 
-}
 .socials .li {
     display: inline-block;
 }
@@ -297,10 +299,11 @@ a{
 #footer .copy{
     overflow: hidden;
     float: right;
-    font-family: "Arial";
+    font-family: "Arial", Verdana, Tahoma, sans-serif;
     color: #5e5e5e;
     font-size: 12px;
     border-top:5px solid #0481c2; 
     width: 710px;
     text-align: right;
     padding: 12px 0 60px 0;
+}
