--- a/css/styles.css
+++ b/css/styles.css
@@ -250,11 +250,12 @@ a{
 #footer .socials {
     display: flex;
     float: left;
-    border-top:5px solid #0481c2;
+    /* border-top:5px solid #0481c2; */
     width: 228px;
     padding-top: 5px;
     position: relative;
-    
+    width: 230px;
+    float: left;
 }
 
 .socials .li {
@@ -295,6 +296,7 @@ a{
 }
 #footer .copyright{
     overflow: hidden;
+    float: right;
     /* padding: 12px 0 60px 0;  */
 }
 #footer .copy{
@@ -303,7 +305,16 @@ a{
     font-size: 12px;
     text-align: right;
     float: right;
-    border-top:5px solid #0481c2; 
     width: 710px;
-    padding-top: 5px;
+}
+
+#footer .wrapper .socials{
+    border-top:5px solid #0481c2; 
+    padding-top: 5px;    
+    width: 230px;
+}
+#footer .wrapper2 .copyright{
+    border-top:5px solid #0481c2; 
+    padding: 5px 0 60px 0;
+    width: 710px;
 }
